links sass-less with create-react-app

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,8 @@
     <a href="https://facebook.github.io/react/"><b>FaceBook React</b></a>
     <a href="https://zhenyong.github.io/react/docs/why-react.html"><b>zhenyong.github.io react</b></a>
     <a href="https://github.com/facebookincubator/create-react-app/"><b>create-react-app</b></a>
+    <a href="https://medium.com/@Connorelsea/using-sass-with-create-react-app-7125d6913760#.nvt7m6h4a"><b>Medium.com: using-sass-with-create-react-app</b></a>
+    <a href="https://github.com/facebookincubator/create-react-app/blob/master/packages/react-scripts/template/README.md#adding-a-css-preprocessor-sass-less-etc"><b>create-react-app with settings (how to use sass/less etc...)</b></a>
     <a href="https://react-bootstrap.github.io/"><b>React-Bootstrap</b></a>
     <a href="https://github.com/facebook/react-devtools"><b>react-devtools Extension</b></a>
     <a href="https://github.com/zalmoxisus/redux-devtools-extension"><b>Redux DevTools Extension</b></a> 
